[package]
name = "neo-sync"
version = "0.0.3"
edition = "2021"
authors = ["Kian Nguyen"]
repository = "https://github.com/nkien0204/neo-sync"
description = "Synchronizing Neovim's configurations"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.1"
